v0.0.10: Make JDK 1.7-compatible and prep for Maven Cental